force-app/main/default/objects/SalesforceOrder__x/SalesforceOrder__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceOrder</externalName>
    <label>Ordine Salesforce</label>
    <pluralLabel>Ordini Salesforce</pluralLabel>
</CustomObject>