force-app/main/default/objects/SalesforceOrder__x/fields/Bil_BankAccountSignatoryLastNameC__c.field-meta.xml
<CustomField>
    <fullName>Bil_BankAccountSignatoryLastNameC__c</fullName>
    <description>Bil_BankAccountSignatoryLastNameC</description>
    <externalDeveloperName>Bil_BankAccountSignatoryLastNameC</externalDeveloperName>
    <label>Cognome Sottoscrittore CC</label>
    <length>60</length>
    <type>Text</type>
</CustomField>