force-app/main/default/objects/SalesforceOrder__x/fields/Bil_CareOfC__c.field-meta.xml
<CustomField>
    <fullName>Bil_CareOfC__c</fullName>
    <description>Bil_CareOfC</description>
    <externalDeveloperName>Bil_CareOfC</externalDeveloperName>
    <label>Presso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>