force-app/main/default/objects/SalesforceOrder__x/fields/Bil_CompanyOwnerC__c.field-meta.xml
<CustomField>
    <fullName>Bil_CompanyOwnerC__c</fullName>
    <description>Bil_CompanyOwnerC</description>
    <externalDeveloperName>Bil_CompanyOwnerC</externalDeveloperName>
    <label>Company Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>