force-app/main/default/objects/SalesforceOrder__x/fields/Bil_ElectronicInvoiceCertifiedEmailAddre__c.field-meta.xml
<CustomField>
    <fullName>Bil_ElectronicInvoiceCertifiedEmailAddre__c</fullName>
    <description>Bil_ElectronicInvoiceCertifiedEmailAddressC</description>
    <externalDeveloperName>Bil_ElectronicInvoiceCertifiedEmailAddressC</externalDeveloperName>
    <label>Bil_ElectronicInvoiceCertifiedEmailAddre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>