force-app/main/default/objects/SalesforceOrder__x/fields/Bil_IbanIsForeignC__c.field-meta.xml
<CustomField>
    <fullName>Bil_IbanIsForeignC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bil_IbanIsForeignC</description>
    <externalDeveloperName>Bil_IbanIsForeignC</externalDeveloperName>
    <label>IBAN Estero</label>
    <type>Checkbox</type>
</CustomField>