force-app/main/default/objects/SalesforceOrder__x/fields/Bil_InvoiceEmailAddressC__c.field-meta.xml
<CustomField>
    <fullName>Bil_InvoiceEmailAddressC__c</fullName>
    <description>Bil_InvoiceEmailAddressC</description>
    <externalDeveloperName>Bil_InvoiceEmailAddressC</externalDeveloperName>
    <label>Email Invio Bolletta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>