force-app/main/default/objects/SalesforceOrder__x/fields/Bil_IsMigratedC__c.field-meta.xml
<CustomField>
    <fullName>Bil_IsMigratedC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bil_IsMigratedC</description>
    <externalDeveloperName>Bil_IsMigratedC</externalDeveloperName>
    <label>Migrato</label>
    <type>Checkbox</type>
</CustomField>