force-app/main/default/objects/SalesforceOrder__x/fields/Bil_ReminderFlagC__c.field-meta.xml
<CustomField>
    <fullName>Bil_ReminderFlagC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bil_ReminderFlagC</description>
    <externalDeveloperName>Bil_ReminderFlagC</externalDeveloperName>
    <label>Flag per sollecito</label>
    <type>Checkbox</type>
</CustomField>