force-app/main/default/objects/SalesforceOrder__x/fields/Bil_StatusC__c.field-meta.xml
<CustomField>
    <fullName>Bil_StatusC__c</fullName>
    <description>Bil_StatusC</description>
    <externalDeveloperName>Bil_StatusC</externalDeveloperName>
    <label>Status del Profilo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>