force-app/main/default/objects/SalesforceOrder__x/fields/Bil_SubjectCodeEndDateC__c.field-meta.xml
<CustomField>
    <fullName>Bil_SubjectCodeEndDateC__c</fullName>
    <description>Bil_SubjectCodeEndDateC</description>
    <externalDeveloperName>Bil_SubjectCodeEndDateC</externalDeveloperName>
    <label>Data fine validità codice destinatario</label>
    <type>DateTime</type>
</CustomField>