force-app/main/default/objects/SalesforceOrder__x/fields/Int_ReasonC__c.field-meta.xml
<CustomField>
    <fullName>Int_ReasonC__c</fullName>
    <description>Int_ReasonC</description>
    <externalDeveloperName>Int_ReasonC</externalDeveloperName>
    <label>Causale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>