force-app/main/default/objects/SalesforceOrder__x/fields/Int_StatusC__c.field-meta.xml
<CustomField>
    <fullName>Int_StatusC__c</fullName>
    <description>Int_StatusC</description>
    <externalDeveloperName>Int_StatusC</externalDeveloperName>
    <label>Stato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>