force-app/main/default/objects/SalesforceOrder__x/fields/Ord_AccountholderTypeBeneficiaryC__c.field-meta.xml
<CustomField>
    <fullName>Ord_AccountholderTypeBeneficiaryC__c</fullName>
    <description>Ord_AccountholderTypeBeneficiaryC</description>
    <externalDeveloperName>Ord_AccountholderTypeBeneficiaryC</externalDeveloperName>
    <label>Tipologia Intestatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>