force-app/main/default/objects/SalesforceOrder__x/fields/Ord_AdditionalAttachmentsC__c.field-meta.xml
<CustomField>
    <fullName>Ord_AdditionalAttachmentsC__c</fullName>
    <description>Ord_AdditionalAttachmentsC</description>
    <externalDeveloperName>Ord_AdditionalAttachmentsC</externalDeveloperName>
    <label>Ord_AdditionalAttachmentsC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>