force-app/main/default/objects/SalesforceOrder__x/fields/Ord_AdministrativeBurdenC__c.field-meta.xml
<CustomField>
    <fullName>Ord_AdministrativeBurdenC__c</fullName>
    <description>Ord_AdministrativeBurdenC</description>
    <externalDeveloperName>Ord_AdministrativeBurdenC</externalDeveloperName>
    <label>Ord_AdministrativeBurdenC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>