force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ApprovalTypeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ApprovalTypeC__c</fullName>
    <description>Ord_ApprovalTypeC</description>
    <externalDeveloperName>Ord_ApprovalTypeC</externalDeveloperName>
    <label>Ord_ApprovalTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>