force-app/main/default/objects/SalesforceOrder__x/fields/Ord_BadPayerC__c.field-meta.xml
<CustomField>
    <fullName>Ord_BadPayerC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ord_BadPayerC</description>
    <externalDeveloperName>Ord_BadPayerC</externalDeveloperName>
    <label>Ord_BadPayerC</label>
    <type>Checkbox</type>
</CustomField>