force-app/main/default/objects/SalesforceOrder__x/fields/Ord_BankAccountSignatoryFirstNameC__c.field-meta.xml
<CustomField>
    <fullName>Ord_BankAccountSignatoryFirstNameC__c</fullName>
    <description>Ord_BankAccountSignatoryFirstNameC</description>
    <externalDeveloperName>Ord_BankAccountSignatoryFirstNameC</externalDeveloperName>
    <label>Ord_BankAccountSignatoryFirstNameC</label>
    <length>60</length>
    <type>Text</type>
</CustomField>