force-app/main/default/objects/SalesforceOrder__x/fields/Ord_BankAccountSignatoryLastNameC__c.field-meta.xml
<CustomField>
    <fullName>Ord_BankAccountSignatoryLastNameC__c</fullName>
    <description>Ord_BankAccountSignatoryLastNameC</description>
    <externalDeveloperName>Ord_BankAccountSignatoryLastNameC</externalDeveloperName>
    <label>Cognome intestatario c/c</label>
    <length>60</length>
    <type>Text</type>
</CustomField>