force-app/main/default/objects/SalesforceOrder__x/fields/Ord_BillSendModeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_BillSendModeC__c</fullName>
    <description>Ord_BillSendModeC</description>
    <externalDeveloperName>Ord_BillSendModeC</externalDeveloperName>
    <label>Ord_BillSendModeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>