force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CaliberC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CaliberC__c</fullName>
    <description>Ord_CaliberC</description>
    <externalDeveloperName>Ord_CaliberC</externalDeveloperName>
    <label>Ord_CaliberC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>