force-app/main/default/objects/SalesforceOrder__x/fields/Ord_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Ord_Campaign_Name__c</fullName>
    <description>Ord_Campaign_Name</description>
    <externalDeveloperName>Ord_Campaign_Name</externalDeveloperName>
    <label>Ord_Campaign_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>