force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CampaignCodeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CampaignCodeC__c</fullName>
    <description>Ord_CampaignCodeC</description>
    <externalDeveloperName>Ord_CampaignCodeC</externalDeveloperName>
    <label>Codice Campagna</label>
    <length>20</length>
    <type>Text</type>
</CustomField>