force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CancellationReasonC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CancellationReasonC__c</fullName>
    <description>Ord_CancellationReasonC</description>
    <externalDeveloperName>Ord_CancellationReasonC</externalDeveloperName>
    <label>Ord_CancellationReasonC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>