force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CancellationReasonCodeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CancellationReasonCodeC__c</fullName>
    <description>Ord_CancellationReasonCodeC</description>
    <externalDeveloperName>Ord_CancellationReasonCodeC</externalDeveloperName>
    <label>Codice Causale Annullamento/Ripensamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>