force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CancellationReasonDescriptionC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CancellationReasonDescriptionC__c</fullName>
    <description>Ord_CancellationReasonDescriptionC</description>
    <externalDeveloperName>Ord_CancellationReasonDescriptionC</externalDeveloperName>
    <label>Descrizione Annullamento/Ripensamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>