force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CancellationRequestDateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CancellationRequestDateC__c</fullName>
    <description>Ord_CancellationRequestDateC</description>
    <externalDeveloperName>Ord_CancellationRequestDateC</externalDeveloperName>
    <label>Ord_CancellationRequestDateC</label>
    <type>DateTime</type>
</CustomField>