force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CheckPodPdrReasonC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CheckPodPdrReasonC__c</fullName>
    <description>Ord_CheckPodPdrReasonC</description>
    <externalDeveloperName>Ord_CheckPodPdrReasonC</externalDeveloperName>
    <label>Ord_CheckPodPdrReasonC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>