force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CILegalRepresentativeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CILegalRepresentativeC__c</fullName>
    <description>Ord_CILegalRepresentativeC</description>
    <externalDeveloperName>Ord_CILegalRepresentativeC</externalDeveloperName>
    <label>Ord_CILegalRepresentativeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>