force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ClientCategoryFormulaC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ClientCategoryFormulaC__c</fullName>
    <description>Ord_ClientCategoryFormulaC</description>
    <externalDeveloperName>Ord_ClientCategoryFormulaC</externalDeveloperName>
    <label>Ord_ClientCategoryFormulaC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>