force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ClusterC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ClusterC__c</fullName>
    <description>Ord_ClusterC</description>
    <externalDeveloperName>Ord_ClusterC</externalDeveloperName>
    <label>Ord_ClusterC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>