force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CommercialActionC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CommercialActionC__c</fullName>
    <description>Ord_CommercialActionC</description>
    <externalDeveloperName>Ord_CommercialActionC</externalDeveloperName>
    <label>Azione commerciale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>