force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CommercialProductC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CommercialProductC__c</fullName>
    <description>Ord_CommercialProductC</description>
    <externalDeveloperName>Ord_CommercialProductC</externalDeveloperName>
    <label>Ord_CommercialProductC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>