force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CommercialProductCodeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CommercialProductCodeC__c</fullName>
    <description>Ord_CommercialProductCodeC</description>
    <externalDeveloperName>Ord_CommercialProductCodeC</externalDeveloperName>
    <label>Ord_CommercialProductCodeC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>