force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CommercialProductVersionC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CommercialProductVersionC__c</fullName>
    <description>Ord_CommercialProductVersionC</description>
    <externalDeveloperName>Ord_CommercialProductVersionC</externalDeveloperName>
    <label>Versione Prodotto Commerciale</label>
    <length>80</length>
    <type>Text</type>
</CustomField>