force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CompanyOwnerC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CompanyOwnerC__c</fullName>
    <description>Ord_CompanyOwnerC</description>
    <externalDeveloperName>Ord_CompanyOwnerC</externalDeveloperName>
    <label>Company Owner</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>