force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ConnectionMandateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ConnectionMandateC__c</fullName>
    <description>Ord_ConnectionMandateC</description>
    <externalDeveloperName>Ord_ConnectionMandateC</externalDeveloperName>
    <label>Ord_ConnectionMandateC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>