force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ConnectionTypeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ConnectionTypeC__c</fullName>
    <description>Ord_ConnectionTypeC</description>
    <externalDeveloperName>Ord_ConnectionTypeC</externalDeveloperName>
    <label>Ord_ConnectionTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>