force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CreatedByC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CreatedByC__c</fullName>
    <description>Ord_CreatedByC</description>
    <externalDeveloperName>Ord_CreatedByC</externalDeveloperName>
    <label>Creato da </label>
    <length>50</length>
    <type>Text</type>
</CustomField>