force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CreditCheckDescriptionC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CreditCheckDescriptionC__c</fullName>
    <description>Ord_CreditCheckDescriptionC</description>
    <externalDeveloperName>Ord_CreditCheckDescriptionC</externalDeveloperName>
    <label>Ord_CreditCheckDescriptionC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>