force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CustomerCodeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CustomerCodeC__c</fullName>
    <description>Ord_CustomerCodeC</description>
    <externalDeveloperName>Ord_CustomerCodeC</externalDeveloperName>
    <label>Codice Cliente </label>
    <length>30</length>
    <type>Text</type>
</CustomField>