force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CustomerCompanyNameC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CustomerCompanyNameC__c</fullName>
    <description>Ord_CustomerCompanyNameC</description>
    <externalDeveloperName>Ord_CustomerCompanyNameC</externalDeveloperName>
    <label>Ord_CustomerCompanyNameC</label>
    <length>150</length>
    <type>Text</type>
</CustomField>