force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CustomerFiscalCodeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CustomerFiscalCodeC__c</fullName>
    <description>Ord_CustomerFiscalCodeC</description>
    <externalDeveloperName>Ord_CustomerFiscalCodeC</externalDeveloperName>
    <label>CF Cliente</label>
    <length>16</length>
    <type>Text</type>
</CustomField>