force-app/main/default/objects/SalesforceOrder__x/fields/Ord_CustomerVATNumberC__c.field-meta.xml
<CustomField>
    <fullName>Ord_CustomerVATNumberC__c</fullName>
    <description>Ord_CustomerVATNumberC</description>
    <externalDeveloperName>Ord_CustomerVATNumberC</externalDeveloperName>
    <label>Ord_CustomerVATNumberC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>