force-app/main/default/objects/SalesforceOrder__x/fields/Ord_DateComfortCallC__c.field-meta.xml
<CustomField>
    <fullName>Ord_DateComfortCallC__c</fullName>
    <description>Ord_DateComfortCallC</description>
    <externalDeveloperName>Ord_DateComfortCallC</externalDeveloperName>
    <label>Data comfort call</label>
    <type>DateTime</type>
</CustomField>