force-app/main/default/objects/SalesforceOrder__x/fields/Ord_DeliberationC__c.field-meta.xml
<CustomField>
    <fullName>Ord_DeliberationC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ord_DeliberationC</description>
    <externalDeveloperName>Ord_DeliberationC</externalDeveloperName>
    <label>Delibera</label>
    <type>Checkbox</type>
</CustomField>