force-app/main/default/objects/SalesforceOrder__x/fields/Ord_DeliveryAddressC__c.field-meta.xml
<CustomField>
    <fullName>Ord_DeliveryAddressC__c</fullName>
    <description>Ord_DeliveryAddressC</description>
    <externalDeveloperName>Ord_DeliveryAddressC</externalDeveloperName>
    <label>Indirizzo di recapito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>