force-app/main/default/objects/SalesforceOrder__x/fields/Ord_DisconnectableC__c.field-meta.xml
<CustomField>
    <fullName>Ord_DisconnectableC__c</fullName>
    <description>Ord_DisconnectableC</description>
    <externalDeveloperName>Ord_DisconnectableC</externalDeveloperName>
    <label>Disalimentabilità</label>
    <length>255</length>
    <type>Text</type>
</CustomField>