force-app/main/default/objects/SalesforceOrder__x/fields/Ord_DivergentSubjectC__c.field-meta.xml
<CustomField>
    <fullName>Ord_DivergentSubjectC__c</fullName>
    <description>Ord_DivergentSubjectC</description>
    <externalDeveloperName>Ord_DivergentSubjectC</externalDeveloperName>
    <label>Destinatario Divergente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>