force-app/main/default/objects/SalesforceOrder__x/fields/Ord_EffectiveDateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_EffectiveDateC__c</fullName>
    <description>Ord_EffectiveDateC</description>
    <externalDeveloperName>Ord_EffectiveDateC</externalDeveloperName>
    <label>Data decorrenza</label>
    <type>DateTime</type>
</CustomField>