force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ElectronicInvoicingMethodC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ElectronicInvoicingMethodC__c</fullName>
    <description>Ord_ElectronicInvoicingMethodC</description>
    <externalDeveloperName>Ord_ElectronicInvoicingMethodC</externalDeveloperName>
    <label>Modalità invio Fatturazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>