force-app/main/default/objects/SalesforceOrder__x/fields/Ord_EstimatedVATC__c.field-meta.xml
<CustomField>
    <fullName>Ord_EstimatedVATC__c</fullName>
    <description>Ord_EstimatedVATC</description>
    <externalDeveloperName>Ord_EstimatedVATC</externalDeveloperName>
    <label>Iva Preventivo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>