force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ExciseGASC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ExciseGASC__c</fullName>
    <description>Ord_ExciseGASC</description>
    <externalDeveloperName>Ord_ExciseGASC</externalDeveloperName>
    <label>Ord_ExciseGASC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>