force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ExciseRateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ExciseRateC__c</fullName>
    <description>Ord_ExciseRateC</description>
    <externalDeveloperName>Ord_ExciseRateC</externalDeveloperName>
    <label>Aliquota Accise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>