force-app/main/default/objects/SalesforceOrder__x/fields/Ord_FamilyNumberC__c.field-meta.xml
<CustomField>
    <fullName>Ord_FamilyNumberC__c</fullName>
    <description>Ord_FamilyNumberC</description>
    <externalDeveloperName>Ord_FamilyNumberC</externalDeveloperName>
    <label>Componenti Nucleo Famigliare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>