force-app/main/default/objects/SalesforceOrder__x/fields/Ord_FlyingRequestC__c.field-meta.xml
<CustomField>
    <fullName>Ord_FlyingRequestC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ord_FlyingRequestC</description>
    <externalDeveloperName>Ord_FlyingRequestC</externalDeveloperName>
    <label>Pratica in volo</label>
    <type>Checkbox</type>
</CustomField>