force-app/main/default/objects/SalesforceOrder__x/fields/Ord_IbanABIC__c.field-meta.xml
<CustomField>
    <fullName>Ord_IbanABIC__c</fullName>
    <description>Ord_IbanABIC</description>
    <externalDeveloperName>Ord_IbanABIC</externalDeveloperName>
    <label>ABI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>