force-app/main/default/objects/SalesforceOrder__x/fields/Ord_IbanCABC__c.field-meta.xml
<CustomField>
    <fullName>Ord_IbanCABC__c</fullName>
    <description>Ord_IbanCABC</description>
    <externalDeveloperName>Ord_IbanCABC</externalDeveloperName>
    <label>CAB</label>
    <length>15</length>
    <type>Text</type>
</CustomField>