force-app/main/default/objects/SalesforceOrder__x/fields/Ord_IbanCIN_IBANC__c.field-meta.xml
<CustomField>
    <fullName>Ord_IbanCIN_IBANC__c</fullName>
    <description>Ord_IbanCIN_IBANC</description>
    <externalDeveloperName>Ord_IbanCIN_IBANC</externalDeveloperName>
    <label>Ord_IbanCIN_IBANC</label>
    <length>2</length>
    <type>Text</type>
</CustomField>