force-app/main/default/objects/SalesforceOrder__x/fields/Ord_IbanCountryC__c.field-meta.xml
<CustomField>
    <fullName>Ord_IbanCountryC__c</fullName>
    <description>Ord_IbanCountryC</description>
    <externalDeveloperName>Ord_IbanCountryC</externalDeveloperName>
    <label>Paese</label>
    <length>10</length>
    <type>Text</type>
</CustomField>