force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ImplantTypeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ImplantTypeC__c</fullName>
    <description>Ord_ImplantTypeC</description>
    <externalDeveloperName>Ord_ImplantTypeC</externalDeveloperName>
    <label>Tipo impianto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>