force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ImplantTypeFormulaC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ImplantTypeFormulaC__c</fullName>
    <description>Ord_ImplantTypeFormulaC</description>
    <externalDeveloperName>Ord_ImplantTypeFormulaC</externalDeveloperName>
    <label>Impianto</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>