force-app/main/default/objects/SalesforceOrder__x/fields/Ord_IsMucC__c.field-meta.xml
<CustomField>
    <fullName>Ord_IsMucC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ord_IsMucC</description>
    <externalDeveloperName>Ord_IsMucC</externalDeveloperName>
    <label>Ord_IsMucC</label>
    <type>Checkbox</type>
</CustomField>