force-app/main/default/objects/SalesforceOrder__x/fields/Ord_IsVASC__c.field-meta.xml
<CustomField>
    <fullName>Ord_IsVASC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ord_IsVASC</description>
    <externalDeveloperName>Ord_IsVASC</externalDeveloperName>
    <label>Ord_IsVASC</label>
    <type>Checkbox</type>
</CustomField>