force-app/main/default/objects/SalesforceOrder__x/fields/Ord_LoginChannelC__c.field-meta.xml
<CustomField>
    <fullName>Ord_LoginChannelC__c</fullName>
    <description>Ord_LoginChannelC</description>
    <externalDeveloperName>Ord_LoginChannelC</externalDeveloperName>
    <label>Canale di Vendita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>