force-app/main/default/objects/SalesforceOrder__x/fields/Ord_MarketingPrivacyC__c.field-meta.xml
<CustomField>
    <fullName>Ord_MarketingPrivacyC__c</fullName>
    <description>Ord_MarketingPrivacyC</description>
    <externalDeveloperName>Ord_MarketingPrivacyC</externalDeveloperName>
    <label>Consenso Marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>