force-app/main/default/objects/SalesforceOrder__x/fields/Ord_MaterialDescriptionC__c.field-meta.xml
<CustomField>
    <fullName>Ord_MaterialDescriptionC__c</fullName>
    <description>Ord_MaterialDescriptionC</description>
    <externalDeveloperName>Ord_MaterialDescriptionC</externalDeveloperName>
    <label>Descrizione Materiale da Inviare</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>