force-app/main/default/objects/SalesforceOrder__x/fields/Ord_MaxRequiredPotentialC__c.field-meta.xml
<CustomField>
    <fullName>Ord_MaxRequiredPotentialC__c</fullName>
    <description>Ord_MaxRequiredPotentialC</description>
    <externalDeveloperName>Ord_MaxRequiredPotentialC</externalDeveloperName>
    <label>Potenzialità Massima Richiesta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>