force-app/main/default/objects/SalesforceOrder__x/fields/Ord_MissingDueAmountC__c.field-meta.xml
<CustomField>
    <fullName>Ord_MissingDueAmountC__c</fullName>
    <description>Ord_MissingDueAmountC</description>
    <externalDeveloperName>Ord_MissingDueAmountC</externalDeveloperName>
    <label>Ord_MissingDueAmountC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>