force-app/main/default/objects/SalesforceOrder__x/fields/Ord_OnerousUnreviewableStartDateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_OnerousUnreviewableStartDateC__c</fullName>
    <description>Ord_OnerousUnreviewableStartDateC</description>
    <externalDeveloperName>Ord_OnerousUnreviewableStartDateC</externalDeveloperName>
    <label>Ord_OnerousUnreviewableStartDateC</label>
    <type>DateTime</type>
</CustomField>