force-app/main/default/objects/SalesforceOrder__x/fields/Ord_OperatorDeclarationInfosC__c.field-meta.xml
<CustomField>
    <fullName>Ord_OperatorDeclarationInfosC__c</fullName>
    <description>Ord_OperatorDeclarationInfosC</description>
    <externalDeveloperName>Ord_OperatorDeclarationInfosC</externalDeveloperName>
    <label>Ord_OperatorDeclarationInfosC</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>