force-app/main/default/objects/SalesforceOrder__x/fields/Ord_OriginalOrderId__c.field-meta.xml
<CustomField>
    <fullName>Ord_OriginalOrderId__c</fullName>
    <description>Ord_OriginalOrderId</description>
    <externalDeveloperName>Ord_OriginalOrderId</externalDeveloperName>
    <label>Ord_OriginalOrderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>