force-app/main/default/objects/SalesforceOrder__x/fields/Ord_PhaseC__c.field-meta.xml
<CustomField>
    <fullName>Ord_PhaseC__c</fullName>
    <description>Ord_PhaseC</description>
    <externalDeveloperName>Ord_PhaseC</externalDeveloperName>
    <label>Ord_PhaseC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>