force-app/main/default/objects/SalesforceOrder__x/fields/Ord_PreviousHoldeCompanyNameC__c.field-meta.xml
<CustomField>
    <fullName>Ord_PreviousHoldeCompanyNameC__c</fullName>
    <description>Ord_PreviousHoldeCompanyNameC</description>
    <externalDeveloperName>Ord_PreviousHoldeCompanyNameC</externalDeveloperName>
    <label>Ord_PreviousHoldeCompanyNameC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>