force-app/main/default/objects/SalesforceOrder__x/fields/Ord_PreviousHolderLastNameC__c.field-meta.xml
<CustomField>
    <fullName>Ord_PreviousHolderLastNameC__c</fullName>
    <description>Ord_PreviousHolderLastNameC</description>
    <externalDeveloperName>Ord_PreviousHolderLastNameC</externalDeveloperName>
    <label>Cognome precedente intestatario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>