force-app/main/default/objects/SalesforceOrder__x/fields/Ord_PreviousTraderC__c.field-meta.xml
<CustomField>
    <fullName>Ord_PreviousTraderC__c</fullName>
    <description>Ord_PreviousTraderC</description>
    <externalDeveloperName>Ord_PreviousTraderC</externalDeveloperName>
    <label>Venditore Uscente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>