force-app/main/default/objects/SalesforceOrder__x/fields/Ord_QuickQuoteC__c.field-meta.xml
<CustomField>
    <fullName>Ord_QuickQuoteC__c</fullName>
    <description>Ord_QuickQuoteC</description>
    <externalDeveloperName>Ord_QuickQuoteC</externalDeveloperName>
    <label>preventivo rapido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>