force-app/main/default/objects/SalesforceOrder__x/fields/Ord_QuotationNumberC__c.field-meta.xml
<CustomField>
    <fullName>Ord_QuotationNumberC__c</fullName>
    <description>Ord_QuotationNumberC</description>
    <externalDeveloperName>Ord_QuotationNumberC</externalDeveloperName>
    <label>Numero Preventivo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>