force-app/main/default/objects/SalesforceOrder__x/fields/Ord_RecessSentC__c.field-meta.xml
<CustomField>
    <fullName>Ord_RecessSentC__c</fullName>
    <description>Ord_RecessSentC</description>
    <externalDeveloperName>Ord_RecessSentC</externalDeveloperName>
    <label>Inviato Recesso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>