force-app/main/default/objects/SalesforceOrder__x/fields/Ord_RegionalAdditionalC__c.field-meta.xml
<CustomField>
    <fullName>Ord_RegionalAdditionalC__c</fullName>
    <description>Ord_RegionalAdditionalC</description>
    <externalDeveloperName>Ord_RegionalAdditionalC</externalDeveloperName>
    <label>Addizionale Regionale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>