force-app/main/default/objects/SalesforceOrder__x/fields/Ord_RemiCodeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_RemiCodeC__c</fullName>
    <description>Ord_RemiCodeC</description>
    <externalDeveloperName>Ord_RemiCodeC</externalDeveloperName>
    <label>Ord_RemiCodeC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>