force-app/main/default/objects/SalesforceOrder__x/fields/Ord_RequestSourceC__c.field-meta.xml
<CustomField>
    <fullName>Ord_RequestSourceC__c</fullName>
    <description>Ord_RequestSourceC</description>
    <externalDeveloperName>Ord_RequestSourceC</externalDeveloperName>
    <label>Provenienza Richiesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>