force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ResidentC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ResidentC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ord_ResidentC</description>
    <externalDeveloperName>Ord_ResidentC</externalDeveloperName>
    <label>Residente  all&apos;indirizzo di Fornitura</label>
    <type>Checkbox</type>
</CustomField>