force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ResidentialCityC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ResidentialCityC__c</fullName>
    <description>Ord_ResidentialCityC</description>
    <externalDeveloperName>Ord_ResidentialCityC</externalDeveloperName>
    <label>Comune [Residenziale/Sede Legale]</label>
    <length>40</length>
    <type>Text</type>
</CustomField>