force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ResidentialPostalCodeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ResidentialPostalCodeC__c</fullName>
    <description>Ord_ResidentialPostalCodeC</description>
    <externalDeveloperName>Ord_ResidentialPostalCodeC</externalDeveloperName>
    <label>Ord_ResidentialPostalCodeC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>