force-app/main/default/objects/SalesforceOrder__x/fields/Ord_RetroactiveDateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_RetroactiveDateC__c</fullName>
    <description>Ord_RetroactiveDateC</description>
    <externalDeveloperName>Ord_RetroactiveDateC</externalDeveloperName>
    <label>Data Retroattiva</label>
    <type>DateTime</type>
</CustomField>