force-app/main/default/objects/SalesforceOrder__x/fields/Ord_RevokedCancellationC__c.field-meta.xml
<CustomField>
    <fullName>Ord_RevokedCancellationC__c</fullName>
    <description>Ord_RevokedCancellationC</description>
    <externalDeveloperName>Ord_RevokedCancellationC</externalDeveloperName>
    <label>Ord_RevokedCancellationC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>